# render_room

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/format/: mesh.h  wavefront_obj_loader.cpp  wavefront_obj_loader.h
src/render/: camera.cpp  camera.h  composer.cpp  composer.h  compute.cpp  compute.h  framebuffer.cpp  framebuffer.h  render.cpp  render.h  shader.cpp  shader.h  voxel_map.cpp  voxel_map.h
src/ui/: LogWindow.cpp  LogWindow.h  MapWindow.cpp  MapWindow.h  imgui_impl.cpp
src/util/: Config.cpp  Config.h  Config.inl  InteractiveLog.h  Logger.cpp  Logger.h
